# aaxion

./: .aaxion.db  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LEARNING_RUST.md  README.md  docker-compose.yml  go.mod  go.sum  install.sh  install_aaxion.sh  learn.md  postman_collection.json
assets/: files.html  index.html  style.css
cmd/: main.go
docs/: api.md  docker.md  series.md
docs/for_me/: README.md  list_files.md  upload_file.md
internal/anonymous_upload/: admin_handlers.go  handlers.go  routes.go  token_manager.go
internal/api/: music_routes.go  routes.go
internal/auth/: handlers.go  middleware.go
internal/db/: auth.go  db.go  db_schemas.go  file_token_helper.go  file_tokens.go  music_db.go  music_stats_db.go
internal/discovery/: create_discovery_device.go  service.go
internal/files/: api.go  file_chunk_uploader.go  file_downloader.go  file_handler.go  file_helpers.go  file_temp_share.go  public_upload.go
internal/helpers/: http_helpers.go  http_json_helper.go
internal/image/: handlers.go  view_image.go
internal/models/: models.go  music.go  music_stats.go
internal/music/: music.go  music_api.go  music_constants.go  music_stream.go  yt-dlp.go
internal/streamer/: stream_helper.go
internal/system/: storage.go
internal/utils/: json.go
internal/webdav/: handler.go
internal/ws/: ws.go  ws_api.go
src/: handlers.rs  lib.rs  main.rs
src/db/: db_controller.rs  mod.rs
src/handlers/: file_handler.rs  mod.rs  (+1 more)
web/: README.md  UPLOAD_README.md  app.js  landing.html  login.html  styles.css  upload.html  upload.js
(+20 files in other folders)
