[package]
name = "localdrive-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3" # For streaming helpers