[package]
name = "localdrive-rs"
version = "0.1.0"
edition = "2021"

[dependencies] 
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3" # For streaming helpers
axum = { version = "0.7", features = ["multipart", "http1"] } # Ensure http1 is enabled
dav-server = "0.7"